// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/DetailTaches/FiltreStatut All 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi-filter-line fr-fi--sm w-full text-center text-bf500 font-bold"
  >
     Statut
  </span>
</button>
`;

exports[`Storyshots app/pages/collectivite/DetailTaches/FiltreStatut Multi Select 1`] = `
<button
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
>
  <span
    className="fr-fi-filter-fill fr-fi--sm w-full text-center text-bf500 font-bold"
  >
     Statut
  </span>
</button>
`;
